--- a/src/pages/account-statement.pug
+++ b/src/pages/account-statement.pug
@@ -18,7 +18,7 @@ html(lang="uk")
 
 
     main#account-statement.with-footer.account-statement
-      .d-flex.flex-column.align-items-center.pb-20.h-100
+      .d-flex.flex-column.align-items-center.h-100
         .profile__logo.mb-32
           +logo(122)
         .container-shadow.h-100
