--- a/src/pages/investment.pug
+++ b/src/pages/investment.pug
@@ -18,7 +18,7 @@ html(lang="uk")
 
 
     main#investment.with-footer.investment
-      #investment-main.d-flex.flex-column.align-items-center.pb-20
+      #investment-main.d-flex.flex-column.align-items-center
         .profile__logo.mb-32
           +logo(122)
         .container-shadow.h-100
@@ -80,7 +80,7 @@ html(lang="uk")
               .text-12-16.color-81765E80.mr-16 Читати далі
               .ic_arrow-right
 
-      #investment-page__0.d-flex.flex-column.align-items-center.pb-20.d-none
+      #investment-page__0.d-flex.flex-column.align-items-center.d-none
         .profile__logo.mb-32
           +logo(122)
         .container-shadow.h-100
