--- a/src/pages/profile.pug
+++ b/src/pages/profile.pug
@@ -26,17 +26,17 @@ html(lang="uk")
           div
             .d-flex.flex-column.align-items-center
               .profile__balance 100 000. 00 ₴
-              .text-16-16.color-6B6B6B.mt-32 ВНФП Взаємодопомога
+              .text-16-16.color-6B6B6B.mt-32 НПФ Взаємодопомога
               .text-16-16.color-6B6B6B.mt-8 Індивідуальна пенсійна схема
           div
             .d-flex.flex-column.align-items-center
               .profile__balance 100 000. 00 ₴
-              .text-16-16.color-6B6B6B.mt-32 ВНФП Взаємодопомога
+              .text-16-16.color-6B6B6B.mt-32 НПФ Взаємодопомога
               .text-16-16.color-6B6B6B.mt-8 Індивідуальна пенсійна схема
           div
             .d-flex.flex-column.align-items-center
               .profile__balance 100 000. 00 ₴
-              .text-16-16.color-6B6B6B.mt-32 ВНФП Взаємодопомога
+              .text-16-16.color-6B6B6B.mt-32 НПФ Взаємодопомога
               .text-16-16.color-6B6B6B.mt-8 Індивідуальна пенсійна схема
         .btn.text-17-16.mt-48.mb-48.profile__page-btn Поповнити рахунок
 
@@ -48,7 +48,7 @@ html(lang="uk")
               .profile__logo.mt-40
                 +logo(145)
               .profile__balance 100 000. 00 ₴
-              .text-16-16.color-6B6B6B.mt-32 ВНФП Взаємодопомога
+              .text-16-16.color-6B6B6B.mt-32 НПФ Взаємодопомога
               .text-16-16.color-6B6B6B.mt-8 Індивідуальна пенсійна схема
               +divider('Cума поповнення', '', 'margin-top: 53px; margin-bottom: 48px')
               .text-13-20.color-858585.mb-24.text-center.mw-265 Введіть суму на яку плануєте поповнити свій пенсійний рахунок
@@ -63,30 +63,30 @@ html(lang="uk")
               .profile__logo.mt-20
                 +logo(122)
               +divider('Спосіб оплати', 'mt-44 mb-40')
-              p.text-13-20.color-858585 Оберіть спосіб поповнення рахунку
+              p.text-13-20.color-858585.align-self-start Оберіть спосіб поповнення рахунку
               .profile__cards.mt-20
-                .profile__cards__card
+                .profile__cards__card.bb-grey
                   label.profile__cards__card__label(for='applepay')
                     .profile__cards__card__icon
                       .ic_card-apple-pay
                     span.profile__cards__card__name Apple Pay
                     input.profile__cards__card__control(type='radio' id="applepay" name="profile-cards" value="applepay")
                     .profile__cards__card__checkmark
-                .profile__cards__card
+                .profile__cards__card.bb-grey
                   label.profile__cards__card__label(for='googlepay')
                     .profile__cards__card__icon
                       .ic_card-google-pay
                     span.profile__cards__card__name Google Pay
                     input.profile__cards__card__control(type='radio' id="googlepay" name="profile-cards" value="googlepay")
                     .profile__cards__card__checkmark
-                .profile__cards__card
+                .profile__cards__card.bb-grey
                   label.profile__cards__card__label(for='card1')
                     .profile__cards__card__icon
                       .ic_card-card
                     span.profile__cards__card__name АТ Банківська карта
                     input.profile__cards__card__control(type='radio' id="card1" name="profile-cards" value="card1")
                     .profile__cards__card__checkmark
-              button.clear-button.mt-32.color-orange.text-14-16.align-self-start Додати банківську карту
+              button.clear-button.mt-32.color-orange.text-14-16.align-self-start.pl-0 Додати банківську карту
 
           #profile-tab-3
             .d-flex.flex-column.align-items-center
@@ -97,7 +97,7 @@ html(lang="uk")
           <ul class="d-none"><li><a href="#profile-tab-1"></a></li><li><a href="#profile-tab-2"></a></li><li><a href="#profile-tab-3"></a></li></ul>
 
 
-        ul.profile__tabs.mt-auto
+        ul.profile__tabs.mt-auto.pl-0
           li.profile__tabs__link.active
             .profile__tabs__link__number 1
             .ic_check--white
@@ -129,27 +129,27 @@ html(lang="uk")
           .bottom-swipe-menu__items-container
             a.d-flex.align-items-center(href='account-statement.html')
               <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="21" cy="21" r="21" fill="#F2A900" fill-opacity="0.9"/><path d="M17.0797 24.8442L18.6436 24.393L28.0597 14.8641C28.1339 14.788 28.1753 14.6858 28.1748 14.5794C28.1743 14.4731 28.132 14.3712 28.057 14.2958L27.4931 13.7257C27.4567 13.6882 27.4131 13.6584 27.365 13.638C27.3169 13.6175 27.2653 13.6069 27.213 13.6066C27.1608 13.6064 27.109 13.6165 27.0607 13.6365C27.0124 13.6565 26.9686 13.6859 26.9318 13.723L17.5406 23.227L17.0788 24.8433L17.0797 24.8442ZM28.6094 12.596L29.1733 13.1671C29.9512 13.9548 29.9583 15.2256 29.1875 16.0053L19.4846 25.8255L16.1419 26.7881C15.9378 26.8452 15.7194 26.8191 15.5346 26.7153C15.3498 26.6116 15.2137 26.4388 15.1562 26.2349C15.1133 26.0882 15.1127 25.9325 15.1544 25.7855L16.1268 22.3754L25.804 12.5809C25.988 12.3957 26.2071 12.2489 26.4484 12.1491C26.6898 12.0494 26.9485 11.9987 27.2097 12C27.4708 12.0013 27.7291 12.0547 27.9694 12.1568C28.2097 12.259 28.4273 12.4089 28.6094 12.596ZM18.3798 13.62C18.8203 13.62 19.1773 13.9814 19.1773 14.4272C19.178 14.5326 19.1579 14.6371 19.1182 14.7347C19.0785 14.8323 19.0199 14.9212 18.9459 14.9961C18.8718 15.0711 18.7837 15.1307 18.6866 15.1716C18.5894 15.2125 18.4852 15.2339 18.3798 15.2345H15.1899C14.309 15.2345 13.595 15.9573 13.595 16.8481V26.5332C13.595 27.4249 14.309 28.1477 15.1899 28.1477H24.7596C25.6406 28.1477 26.3555 27.4249 26.3555 26.5332V23.3052C26.3555 22.8593 26.7125 22.4979 27.153 22.4979C27.5934 22.4979 27.9504 22.8593 27.9504 23.306V26.5332C27.9504 28.3165 26.5216 29.7622 24.7596 29.7622H15.1899C13.428 29.7622 12 28.3165 12 26.5332V16.8481C12 15.0657 13.428 13.62 15.1899 13.62H18.3798Z" fill="white"/></svg>
-              .d-flex.flex-column.justify-content-center.ml-28
+              .d-flex.flex-column.justify-content-center.ml-28.flex-grow-1.h-100.bb-grey
                 .text-16-16.color-6B6B6B Виписка з рахунку
                   .text-12-16.color-81765E.mt-8 Інфорація про рахунки, перелік і т.д.
             a.d-flex.align-items-center(href='requisites.html')
               <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="21" cy="21" r="21" fill="#F2A900" fill-opacity="0.9"/><path d="M16.9731 19.9392H16.2627V21.3601H16.9731V19.9392ZM25.4985 21.3601H26.209V19.9392H25.4985V21.3601ZM16.9731 23.4985H16.2627V24.209H16.9731V23.4985ZM25.4985 23.4985V24.209H26.209V23.4985H25.4985ZM16.9731 17.8149V17.1045H16.2627V17.8149H16.9731ZM25.4985 17.8149H26.209V17.1045H25.4985V17.8149ZM29.7612 14.9731H30.4716V14.679L30.2642 14.4701L29.7612 14.9731ZM25.4985 10.7104L26.0015 10.2075L25.7926 10H25.4985V10.7104ZM16.9731 21.3601H25.4985V19.9392H16.9731V21.3601ZM16.9731 24.209H25.4985V22.7881H16.9731V24.209ZM16.9731 18.5254H25.4985V17.1045H16.9731V18.5254ZM28.3403 29.8925H14.1313V31.3134H28.3403V29.8925ZM13.4209 29.1821V12.1313H12V29.1821H13.4209ZM29.0507 14.9731V29.1821H30.4716V14.9731H29.0507ZM14.1313 11.4209H25.4985V10H14.1313V11.4209ZM24.9955 11.2134L29.2582 15.4761L30.2642 14.4701L26.0015 10.2075L24.9955 11.2134ZM14.1313 29.8925C13.9429 29.8925 13.7622 29.8177 13.629 29.6845C13.4957 29.5512 13.4209 29.3705 13.4209 29.1821H12C12 29.7474 12.2246 30.2895 12.6243 30.6892C13.024 31.0889 13.5661 31.3134 14.1313 31.3134V29.8925ZM28.3403 31.3134C28.9056 31.3134 29.4477 31.0889 29.8474 30.6892C30.2471 30.2895 30.4716 29.7474 30.4716 29.1821H29.0507C29.0507 29.3705 28.9759 29.5512 28.8427 29.6845C28.7094 29.8177 28.5287 29.8925 28.3403 29.8925V31.3134ZM13.4209 12.1313C13.4209 11.9429 13.4957 11.7622 13.629 11.629C13.7622 11.4957 13.9429 11.4209 14.1313 11.4209V10C13.5661 10 13.024 10.2246 12.6243 10.6243C12.2246 11.024 12 11.5661 12 12.1313H13.4209ZM16.2627 17.8149V23.4985H17.6836V17.8149H16.2627ZM20.5254 17.8149V23.4985H21.9463V17.8149H20.5254ZM24.7881 17.8149V23.4985H26.209V17.8149H24.7881ZM16.2627 15.6836H20.5254V14.2627H16.2627V15.6836ZM21.9463 27.0507H26.209V25.6299H21.9463V27.0507Z" fill="white"/></svg>
-              .d-flex.flex-column.justify-content-center.ml-28
+              .d-flex.flex-column.justify-content-center.ml-28.flex-grow-1.h-100.bb-grey
                 .text-16-16.color-6B6B6B Реквізити рахунку
                   .text-12-16.color-81765E.mt-8 Інформація реквізитів існуючих рахунків
             a.d-flex.align-items-center(href='investment.html')
               <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="21" cy="21" r="21" fill="#F2A900" fill-opacity="0.9"/><path d="M18.6586 12C18.1286 12 17.6204 12.2105 17.2457 12.5852C16.871 12.96 16.6604 13.4682 16.6604 13.9981V14.6642H11.9981C11.4682 14.6642 10.96 14.8747 10.5852 15.2494C10.2105 15.6241 10 16.1324 10 16.6623V27.319C10 27.849 10.2105 28.3572 10.5852 28.7319C10.96 29.1066 11.4682 29.3172 11.9981 29.3172H29.3153C29.8452 29.3172 30.3535 29.1066 30.7282 28.7319C31.1029 28.3572 31.3134 27.849 31.3134 27.319V16.6623C31.3134 16.1324 31.1029 15.6241 30.7282 15.2494C30.3535 14.8747 29.8452 14.6642 29.3153 14.6642H24.653V13.9981C24.653 13.4682 24.4425 12.96 24.0677 12.5852C23.693 12.2105 23.1848 12 22.6549 12H18.6586ZM18.6586 13.3321H22.6549C22.8315 13.3321 23.0009 13.4023 23.1258 13.5272C23.2507 13.6521 23.3209 13.8215 23.3209 13.9981V14.6642H17.9925V13.9981C17.9925 13.8215 18.0627 13.6521 18.1876 13.5272C18.3125 13.4023 18.4819 13.3321 18.6586 13.3321ZM21.1709 22.5422L29.9813 20.1937V27.319C29.9813 27.4957 29.9112 27.6651 29.7863 27.79C29.6614 27.9149 29.4919 27.9851 29.3153 27.9851H11.9981C11.8215 27.9851 11.6521 27.9149 11.5272 27.79C11.4023 27.6651 11.3321 27.4957 11.3321 27.319V20.1924L20.1425 22.5422C20.4795 22.6319 20.834 22.6319 21.1709 22.5422ZM11.9981 15.9963H29.3153C29.4919 15.9963 29.6614 16.0664 29.7863 16.1913C29.9112 16.3163 29.9813 16.4857 29.9813 16.6623V18.815L20.8286 21.2554C20.716 21.2854 20.5975 21.2854 20.4849 21.2554L11.3321 18.815V16.6623C11.3321 16.4857 11.4023 16.3163 11.5272 16.1913C11.6521 16.0664 11.8215 15.9963 11.9981 15.9963Z" fill="white"/></svg>
-              .d-flex.flex-column.justify-content-center.ml-28
+              .d-flex.flex-column.justify-content-center.ml-28.flex-grow-1.h-100.bb-grey
                 .text-16-16.color-6B6B6B Інвестиційний портфель
                   .text-12-16.color-81765E.mt-8 Структура фонду, дохідність та коментарі
             a.d-flex.align-items-center(href='regular-payment.html')
               <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="21" cy="21" r="21" fill="#F2A900" fill-opacity="0.9"/><path d="M19.0625 19.25C18.9465 19.25 18.8352 19.2983 18.7531 19.3842C18.6711 19.4702 18.625 19.5868 18.625 19.7083C18.625 19.8299 18.6711 19.9465 18.7531 20.0324C18.8352 20.1184 18.9465 20.1667 19.0625 20.1667H20.8125C20.9285 20.1667 21.0398 20.1184 21.1219 20.0324C21.2039 19.9465 21.25 19.8299 21.25 19.7083C21.25 19.5868 21.2039 19.4702 21.1219 19.3842C21.0398 19.2983 20.9285 19.25 20.8125 19.25H19.0625Z" fill="white"/><path d="M9 13.2917C9 12.6839 9.23047 12.101 9.6407 11.6712C10.0509 11.2414 10.6073 11 11.1875 11H20.8125C21.3927 11 21.9491 11.2414 22.3593 11.6712C22.7695 12.101 23 12.6839 23 13.2917V19.7083C23 20.3161 22.7695 20.899 22.3593 21.3288C21.9491 21.7586 21.3927 22 20.8125 22H11.1875C10.6073 22 10.0509 21.7586 9.6407 21.3288C9.23047 20.899 9 20.3161 9 19.7083V13.2917ZM9.875 19.7083C9.875 20.073 10.0133 20.4227 10.2594 20.6806C10.5056 20.9385 10.8394 21.0833 11.1875 21.0833H20.8125C21.1606 21.0833 21.4944 20.9385 21.7406 20.6806C21.9867 20.4227 22.125 20.073 22.125 19.7083V15.5833H9.875V19.7083ZM22.125 13.2917C22.125 12.927 21.9867 12.5773 21.7406 12.3194C21.4944 12.0615 21.1606 11.9167 20.8125 11.9167H11.1875C10.8394 11.9167 10.5056 12.0615 10.2594 12.3194C10.0133 12.5773 9.875 12.927 9.875 13.2917V14.6667H22.125V13.2917Z" fill="white"/><path d="M27.5 18.3C30.3665 18.3 32.7 20.6335 32.7 23.5C32.7 26.3665 30.3665 28.7 27.5 28.7C24.6335 28.7 22.3 26.3665 22.3 23.5C22.3 20.6335 24.6335 18.3 27.5 18.3ZM27.5 17C23.9101 17 21 19.9101 21 23.5C21 27.0899 23.9101 30 27.5 30C31.0899 30 34 27.0899 34 23.5C34 19.9101 31.0899 17 27.5 17ZM29.97 25.71L28.15 23.2835V20.25H26.85V23.7164L28.93 26.4894L29.97 25.7093V25.71Z" fill="white"/></svg>
-              .d-flex.flex-column.justify-content-center.ml-28
+              .d-flex.flex-column.justify-content-center.ml-28.flex-grow-1.h-100.bb-grey
                 .text-16-16.color-6B6B6B Регулярний платіж
                   .text-12-16.color-81765E.mt-8 Редагування та створювання платежей
             a.d-flex.align-items-center(href='payment-methods.html')
               <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="21" cy="21" r="21" fill="#F2A900" fill-opacity="0.9"/><path d="M24.2552 24.591C24.1139 24.591 23.9784 24.6472 23.8785 24.7471C23.7785 24.847 23.7224 24.9826 23.7224 25.1239C23.7224 25.2652 23.7785 25.4007 23.8785 25.5007C23.9784 25.6006 24.1139 25.6567 24.2552 25.6567H26.3866C26.5279 25.6567 26.6634 25.6006 26.7633 25.5007C26.8633 25.4007 26.9194 25.2652 26.9194 25.1239C26.9194 24.9826 26.8633 24.847 26.7633 24.7471C26.6634 24.6472 26.5279 24.591 26.3866 24.591H24.2552Z" fill="white"/><path d="M12 17.6642C12 16.9576 12.2807 16.28 12.7803 15.7803C13.28 15.2807 13.9576 15 14.6642 15H26.3866C27.0932 15 27.7708 15.2807 28.2704 15.7803C28.7701 16.28 29.0507 16.9576 29.0507 17.6642V25.1239C29.0507 25.8305 28.7701 26.5081 28.2704 27.0077C27.7708 27.5074 27.0932 27.7881 26.3866 27.7881H14.6642C13.9576 27.7881 13.28 27.5074 12.7803 27.0077C12.2807 26.5081 12 25.8305 12 25.1239V17.6642ZM13.0657 25.1239C13.0657 25.5478 13.2341 25.9544 13.5339 26.2542C13.8336 26.554 14.2402 26.7224 14.6642 26.7224H26.3866C26.8105 26.7224 27.2171 26.554 27.5169 26.2542C27.8167 25.9544 27.9851 25.5478 27.9851 25.1239V20.3284H13.0657V25.1239ZM27.9851 17.6642C27.9851 17.2402 27.8167 16.8336 27.5169 16.5339C27.2171 16.2341 26.8105 16.0657 26.3866 16.0657H14.6642C14.2402 16.0657 13.8336 16.2341 13.5339 16.5339C13.2341 16.8336 13.0657 17.2402 13.0657 17.6642V19.2627H27.9851V17.6642Z" fill="white"/></svg>
-              .d-flex.flex-column.justify-content-center.ml-28
+              .d-flex.flex-column.justify-content-center.ml-28.flex-grow-1.h-100
                 .text-16-16.color-6B6B6B Способи поповнення
                   .text-12-16.color-81765E.mt-8 Опис існуючих способів поповнення
 
