--- a/src/pages/regular-payment-edit.pug
+++ b/src/pages/regular-payment-edit.pug
@@ -29,7 +29,7 @@ html(lang="uk")
             +divider('Оберіть фонд', 'mt-44 mb-24')
             .regular-payment__edit-list
               label.regular-payment__edit-list__item(for="fund-1")
-                span ВНФП Взаємодопомога
+                span НПФ Взаємодопомога
                 .radio-button.radio-button--no-border
                   input.radio-button__control(type='radio' name="regular-payment-fund" id="fund-1" value="fund-1")
                   .radio-button__checkmark
@@ -69,7 +69,7 @@ html(lang="uk")
                       .card-big__content__type credit
               div
                 .slick-card-container
-                  .card-big
+                  .card-big.bg-card-clear
                     .card-big__settings
                       .ic_card-big-settings
                     .card-big__add-new-card
@@ -116,7 +116,7 @@ html(lang="uk")
                   input.radio-button__control(type='radio' name="regular-payment-schedule" id="year" value="year")
                   .radio-button__checkmark
 
-          button#regular-payment-edit-save.btn.w-100.mt-48 Створити регулярний платіж
+          button#regular-payment-edit-save.btn.w-100.mt-48.mw-100 Створити регулярний платіж
 
 
     #regular-payment-edit-modal-1
