--- a/src/pages/regular-payment.pug
+++ b/src/pages/regular-payment.pug
@@ -56,7 +56,7 @@ html(lang="uk")
                       .regular-payment__item__content__info
                         .regular-payment__item__content__info__label Регулярний платіж
                         .regular-payment__item__content__info__number №123456700
-                      .regular-payment__item__content__name ВНФП Взаємодопомога
+                      .regular-payment__item__content__name НПФ Взаємодопомога
                       .regular-payment__item__content__more Дізнатися більше
                 button.card__right-button(type='button')
                   .ic_delete
@@ -72,7 +72,7 @@ html(lang="uk")
                       .regular-payment__item__content__info
                         .regular-payment__item__content__info__label Регулярний платіж
                         .regular-payment__item__content__info__number №123456700
-                      .regular-payment__item__content__name ВНФП Взаємодопомога
+                      .regular-payment__item__content__name НПФ Взаємодопомога
                       .regular-payment__item__content__more Дізнатися більше
                 button.card__right-button(type='button')
                   .ic_delete
@@ -88,7 +88,7 @@ html(lang="uk")
                       .regular-payment__item__content__info
                         .regular-payment__item__content__info__label Регулярний платіж
                         .regular-payment__item__content__info__number №123456700
-                      .regular-payment__item__content__name ВНФП Взаємодопомога
+                      .regular-payment__item__content__name НПФ Взаємодопомога
                       .regular-payment__item__content__more Дізнатися більше
                 button.card__right-button(type='button')
                   .ic_delete
@@ -98,26 +98,26 @@ html(lang="uk")
         .text-16-16.color-6B6B6B.mt-48.mb-28 Налаштування нагадувань
         .text-13-20.color-858585.w-100.mb-16 Оберіть період за який отримаєте нагадування про поповнення рахунку для успішного виконання регулярного платежу
         form.d-flex.flex-column.w-100
-          label.d-flex.align-items-center.mt-12.mb-12(for='notifications-setting-1')
-            .radio-button
+          label.d-flex.align-items-center.mt-12(for='notifications-setting-1')
+            .radio-button.mb-16
               input.radio-button__control(type='radio' name="notifications-setting" id="notifications-setting-1" value="1")
               .radio-button__checkmark
-            .text-16-16.color-656565.ml-20 за 1 день до платежу
-          label.d-flex.align-items-center.mt-12.mb-12(for='notifications-setting-2')
-            .radio-button
+            .text-16-16.color-656565.ml-20.bb-grey.pb-16.flex-grow-1 за 1 день до платежу
+          label.d-flex.align-items-center.mt-12(for='notifications-setting-2')
+            .radio-button.mb-16
               input.radio-button__control(type='radio' name="notifications-setting" id="notifications-setting-2" value="2")
               .radio-button__checkmark
-            .text-16-16.color-656565.ml-20 за 2 дні до платежу
-          label.d-flex.align-items-center.mt-12.mb-12(for='notifications-setting-5')
-            .radio-button
+            .text-16-16.color-656565.ml-20.bb-grey.pb-16.flex-grow-1 за 2 дні до платежу
+          label.d-flex.align-items-center.mt-12(for='notifications-setting-5')
+            .radio-button.mb-16
               input.radio-button__control(type='radio' name="notifications-setting" id="notifications-setting-5" value="5")
               .radio-button__checkmark
-            .text-16-16.color-656565.ml-20 за 5 днів до платежу
-          label.d-flex.align-items-center.mt-12.mb-12(for='notifications-setting-7')
-            .radio-button
+            .text-16-16.color-656565.ml-20.bb-grey.pb-16.flex-grow-1 за 5 днів до платежу
+          label.d-flex.align-items-center.mt-12(for='notifications-setting-7')
+            .radio-button.mb-16
               input.radio-button__control(type='radio' name="notifications-setting" id="notifications-setting-7" value="7")
               .radio-button__checkmark
-            .text-16-16.color-656565.ml-20 за тиждень до платежу
+            .text-16-16.color-656565.ml-20.bb-grey.pb-16.flex-grow-1 за тиждень до платежу
         .list.w-100.mt-48
           .list__item.list__item--no-border
             .list__item__prefix
