--- a/src/pages/requisites.pug
+++ b/src/pages/requisites.pug
@@ -28,29 +28,37 @@ html(lang="uk")
 
             .text-12-16.color-81765E80 Платник П.І.Б.:
             .text-16-16.color-656565.mt-16 Коваленко Сергій Миколайович
+            .cards-divider.mt-8.mb-24
 
-            .text-12-16.color-81765E80.mt-32 Індентифікаційний номер ДРФО:
+            .text-12-16.color-81765E80 Індентифікаційний номер ДРФО:
             .text-16-16.color-656565.mt-16 1001223243245325
+            .cards-divider.mt-8.mb-24
 
-            .text-12-16.color-81765E80.mt-32 Отримувач:
+            .text-12-16.color-81765E80 Отримувач:
             .text-16-16.color-656565.mt-16 ВНФП “Взаємодопомога”
+            .cards-divider.mt-8.mb-24
 
-            .text-12-16.color-81765E80.mt-32 Код ЄДРПОУ:
+            .text-12-16.color-81765E80 Код ЄДРПОУ:
             .text-16-16.color-656565.mt-16 33146316
+            .cards-divider.mt-8.mb-24
 
-            .text-12-16.color-81765E80.mt-32 Банк отримувача:
+            .text-12-16.color-81765E80 Банк отримувача:
             .text-16-16.color-656565.mt-16 АТ “УКРСИББАНК”
+            .cards-divider.mt-8.mb-24
 
-            .text-12-16.color-81765E80.mt-32 Код банку:
+            .text-12-16.color-81765E80 Код банку:
             .text-16-16.color-656565.mt-16 351005
+            .cards-divider.mt-8.mb-24
 
-            .text-12-16.color-81765E80.mt-32 Номер рахунку:
+            .text-12-16.color-81765E80 Номер рахунку:
             .text-16-16.color-656565.mt-16 UA213510050000026503642265088
+            .cards-divider.mt-8.mb-24
 
-            .text-12-16.color-81765E80.mt-32 Сума внеску, грн.:
+            .text-12-16.color-81765E80 Сума внеску, грн.:
             .text-16-16.color-656565.mt-16 1000
+            .cards-divider.mt-8.mb-24
 
-            .text-12-16.color-81765E80.mt-32 Сума внеску, грн.:
+            .text-12-16.color-81765E80 Сума внеску, грн.:
             .text-16-16.color-656565.mt-16 Пенсійні внески на ІПР № 2334567890,
             .text-16-16.color-656565.mt-8 за ПК 34354647585858
             .text-16-16.color-656565.mt-8 від 20.12.2021 р.
