--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -3,7 +3,7 @@
 .settings {
 
   .list__item {
-    max-height: 58px;
+    height: 48px;
 
     &__label {
       font-size: 15px;
@@ -57,3 +57,8 @@
 .mt-80 {
   margin-top: 80px;
 }
+
+.pb-10 {
+  padding-bottom: 10px;
+}
+
