--- a/src/styles/shared/shared.scss
+++ b/src/styles/shared/shared.scss
@@ -326,6 +326,8 @@ p, h1, h2, h3, h4 {
       line-height: 20px;
       color: $color-6B6B6B;
 
+      border-bottom: 1px solid rgba(238, 238, 238, 0.9);
+
       &-icon {
         position: absolute;
         top: calc(50% + 5px - 4px);
@@ -336,6 +338,7 @@ p, h1, h2, h3, h4 {
 
         background-image: url('../assets/images/icons/ic_bottom.svg');
       }
+
     }
 
     &-content {
