--- a/src/pages/demo.pug
+++ b/src/pages/demo.pug
@@ -19,13 +19,16 @@ html(lang="uk")
         .slick-slider.mt-32
           div
             .w-100.d-flex.justify-content-center
-              img.demo__slick-img(src='../assets/images/demo.png')
+              .demo__slick-img.demo__slick-img-1
           div
             .w-100.d-flex.justify-content-center
-              img.demo__slick-img(src='../assets/images/demo.png')
+              .demo__slick-img.demo__slick-img-2
           div
             .w-100.d-flex.justify-content-center
-              img.demo__slick-img(src='../assets/images/demo.png')
+              .demo__slick-img.demo__slick-img-3
+          div
+            .w-100.d-flex.justify-content-center
+              .demo__slick-img.demo__slick-img-4
 
 
 
